# loom

./: .gitignore  README.md  build.sh  collect_readmes.sh  go.mod  go.sum
accel/apple/: .gitignore  CMakeLists.txt  README.md  bench_manifest.json  build.sh
accel/apple/src/: cpu_reference.cpp  cpu_reference.hpp  half.hpp  loom_accel_apple.cpp  mps_backend.hpp  mps_backend.mm  shapes.hpp
accel/intel/: .gitignore  CMakeLists.txt  README.md  bench_manifest.json  build.sh  install_npu_compiler.sh  install_openvino.sh  setup_env.sh.example
accel/intel/example/: README.md  env_linux.go  env_stub.go  go.mod  main.go
accel/intel/include/: loom_accel.h
accel/intel/src/: layer_models.cpp  layer_models.hpp  loom_accel_intel.cpp
accel/qualcomm/: .gitignore  CMakeLists.txt  README.md  bench_manifest.json  build.ps1  build_clang.ps1  install_qairt.ps1  setup_env.ps1.example
accel/qualcomm/include/: loom_accel.h
accel/qualcomm/src/: layer_models.cpp  layer_models.hpp  loom_accel_qualcomm.cpp  qnn_wrapper.cpp  qnn_wrapper.hpp
cabi/: .gitignore  README.md  build.sh  build_all.sh  build_android.sh  build_ios.sh  build_linux.sh  build_linux_arm64.sh  build_macos.sh  build_windows.sh  build_windows_arm64.sh  main.go  run_tests.sh  simple_bench.c  test18_adaptation.c  universal_test.c
csharp/: .gitignore  Activation.cs  ModuleInitializer.cs  NativeMethods.cs  Network.cs  README.md  StepState.cs  Welvet.csproj  build.sh  pack.sh
csharp/examples/: AllLayersTest.csproj  GridScatterDemo.cs  GridScatterDemo.csproj  Program.cs  QuickTest.cs  StepTrainV3.cs  StepTrainV3.csproj  TestOptimizers.cs  TestOptimizers.csproj  TransformerTest.cs  UniversalTest.csproj
detector/: detector.go
docs/: README.md  accelerators.md  apple_metal.md  asm-and-volumetric-exploration.md  bedrock_validation.md  bitnet_cpu.md  codebase_guide.md  cross_path_layers.md  deployment.md  dispatch.md  dna.md  donate_compute.md  entity.md  evolution.md  flutter.md  gpu.md  import_export_todo_list.md  index.md  layers.md  loom_assessment_comparison.md  lucy.md  make_docx.py  memory_history.md  native_layers.md  neural_fountain.md  neural_tween_analysis.md  numerical_types.md  overview.md  parallel_sequential.md  planetbridging.md  poly_structure.md  quantization.md  quick_reference.md  research_paper_1_polyglot_runtime.md  research_paper_3_heterogeneous_moe.md  research_paper_4_integer_training.md  research_paper_5_arc_stitching.md  research_paper_6_universal_precision.md  research_paper_7_recursive_neuro_symbolic.md  seed_manifests.md  (+17 more)
docs/nn/: architecture.md  compile_docs.sh  evaluation.md  examples.md  fp4_quantization.md  gpu_layers.md  grafting.md  layers.md  optimizers.md  overview.md  parallel.md  quick_reference.md  serialization.md  training.md  (+3 more)
examples/: README.md  all_layers_all_modes_all_numerical.go  all_layers_validation.go  json_grid_scatter_agents.go  step_forward_example.go
gpu/: buffer.go  context.go  conv1d.go  conv2d.go  conv3d.go  dense.go  dense_backward.go  dense_fp4.go  embedding.go  layer.go  layernorm.go  lmhead_fp4.go  lstm.go  mha.go  mha_fp4.go  parallel.go  residual.go  rmsnorm.go  rnn.go  softmax.go  swiglu.go  swiglu_fp4.go  zero_gradients.go
legacy/: README.md
lucy/: .gitignore  README.md  go.mod  hf_download.go  hf_entity.go  inference_setup.go  lucy.go  main.go  poly_talk_session.go  run_npu_bridge.sh  support.go
model_conversion/: .gitignore  README.md  bert_text_processor.py  compare_bert_loom.py  convert_model.py  convert_tiny.py  go.mod  quick_talk.go  run_bert_tiny.go  serve_model_auto.go  verify_bert_weights.py
neural/: README.md  doc.go  facade.go
nn/: .gitignore  README.md  activations.go  apply_gradients_gpu.go  architecture.go  attention.go  attention_gpu.go  backend.go  backward.go  cnn.go  conv1d.go  conv2d_gpu.go  conv3d.go  dense.go  ensemble.go  evaluation.go  forward.go  forward_fp4.go  forward_fp4_gpu.go  gpu.go  gpu_integration.go  grafting.go  grouping.go  import_model.go  kmeans_layer.go  layernorm.go  load_generic.go  load_transformer.go  lstm.go  neuraltween.go  nn.go  observer.go  parallel.go  residual.go  rmsnorm.go  rnn.go  rope.go  safetensors.go  safetensors_save.go  sequential.go  (+14 more)
poly/: .gitignore  README.md  accel_apple.go  accel_intel.go  accel_qualcomm.go  all_gen.py  architecture.go  backward.go  bitnet_cpu.go  bitnet_cpu_test.go  bitnet_gpu.go  bitnet_simd.go  bpe.go  bpe_test.go  clustering.go  cnn1.go  cnn1_native_simd.go  cnn1_packed_cpu.go  cnn1_simd.go  cnn1_simd_backward.go  cnn2.go  cnn2_native_simd.go  cnn2_simd.go  cnn2_simd_backward.go  cnn3.go  cnn3_native_simd.go  cnn3_simd.go  cnn3_simd_backward.go  cnn_native.go  conv_transposed1.go  conv_transposed2.go  conv_transposed3.go  dense.go  dense_asm.go  dense_asm_native.go  dense_native.go  dense_native_simd.go  dense_simd.go  dense_simd_backward.go  dna.go  (+161 more)
python/: README.md  copy_binaries.sh  publish.sh  pyproject.toml  universal_test.py
scripts/: env-windows-amd64.ps1  windows_amd64_install_webgpu.bat  windows_amd64_install_webgpu.ps1
tokenizer/: README.md  bpe.go  engine.go  kvcache.go  templates.go  transformer.go
typescript/: .gitignore  README.md  package-lock.json  package.json  publish.sh  tsconfig.json
wasm/: .gitignore  0_0_7.html  README.md  adaptation_demo.html  all_layers_test.html  build.sh  example.html  grid_scatter_demo.js  inference.go  inference.html  main.go  optimizer.html  serve.sh  serve_wasm.sh  test_all_layers.html  test_memory64.html
welvet/: .gitignore  README.md
welvet/python/: .gitignore  MANIFEST.in  README.md  benchmark_dna_evo.py  benchmark_seven_layer.py  benchmark_tiling.py  benchmark_training.py  benchmark_training_comparison.py  consumer_smoke.py  copy_from_cabi.sh  publish.bat  publish.sh  pyproject.toml  seven_layer_spec.py
welvet/python/examples/: 01_dense_forward.py  02_morph_and_train.py  03_save_reload.py  04_mha_forward.py  05_dna_compare.py  README.md  run_all.py
welvet/python/src/welvet/: __init__.py  cabi_verify.py  utils.py
welvet/python/tests/: parity_inspector.py  test_parity.py  verify_parity_full.py
(+546 files in other folders)
